kuber-homeworks/1.5/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: network-multitool
          image: wbitt/network-multitool
          ports:
            - name: http-multitool
              containerPort: 8080
