kuber-homeworks/1.5/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http-nginx
      port: 80
      targetPort: 80
